--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textStyle="bold"
         android:text="반갑습니다."/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:text="저는 저입니다."/>
+        android:textSize="12sp"
+        android:text="저는 저입니다."/>
 
     </LinearLayout>
 
